<resources>
    <string name="app_name">NotionBoard</string>
    <!-- Menu Drawer Strings -->
    <string name="ad_category_1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphones">Смартфоны</string>
    <string name="ad_home_appliance">Бытовая техника</string>
    <string name="ad_category_2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь</string>
    <!-- Sign dialog -->
    <string name="email_hint">Email</string>
    <string name="email_reset_password_was_sent">Письмо для сброса пароля отправлено на почту</string>
    <string name="dialog_reset_email_message">Для востановления пароля укажите ваш Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_action">Войти</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_error">Не удалось отправить email для подтверждения</string>
    <string name="send_verification_done">На вашу почту отправлена ссылка для подтверждения аккаунта, пожалуйста подтвердите ваш аккаунт!</string>
    <string name="default_web_client_idd">966211237889-hom8ebcdkavo5o587l7vvktoq4fkunuh.apps.googleusercontent.com</string>
    <!-- Sign dialog -->
    <string name="link_done">Email поключен к Google аккаунту </string>
    <string name="enter_to_google">У вас уже есть аккаунт с этим Email адресом, войдите по нему </string>
    <!-- Edit activity -->
    <string name="select_city">Выберите город </string>
    <!-- Find dialog -->
    <string name="no_result">Нет совпадений </string>



</resources>