<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ad_category_1">
        <menu>
            <item
                android:title="@string/ad_my_ads"
                android:id="@+id/id_my_ads"
                />
            <item
                android:title="@string/ad_car"
                android:id="@+id/id_cer"
                />
            <item
                android:title="@string/ad_pc"
                android:id="@+id/id_pc"
                />
            <item
                android:title="@string/ad_smartphones"
                android:id="@+id/id_smartphones"
                />
            <item
                android:title="@string/ad_home_appliance"
                android:id="@+id/id_home_appliance"
                />
        </menu>
    </item>

    <item android:title="@string/ad_category_2">
        <menu>
            <item
                android:title="@string/ac_sign_up"
                android:id="@+id/id_sign_up"
                />
            <item
                android:title="@string/ac_sign_in"
                android:id="@+id/id_sign_in"
                />
            <item
                android:title="@string/ac_sign_out"
                android:id="@+id/id_sign_out"
                />
        </menu>
    </item>

</menu>